[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Map.gd" type="Script" id=1]

[node name="Map" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.0392157, 0.67451, 0.631373, 1 )

[node name="Downtown" type="Button" parent="."]
margin_left = 288.0
margin_top = 371.0
margin_right = 415.0
margin_bottom = 419.0
text = "Downtown"

[node name="Waikiki" type="Button" parent="."]
margin_left = 474.0
margin_top = 369.0
margin_right = 601.0
margin_bottom = 417.0
text = "Waikiki Beach"

[node name="Stadium" type="Button" parent="."]
margin_left = 670.0
margin_top = 367.0
margin_right = 797.0
margin_bottom = 415.0
text = "Stadium"

[node name="University" type="Button" parent="."]
margin_left = 710.0
margin_top = 221.0
margin_right = 837.0
margin_bottom = 269.0
text = "University"

[node name="Sell" type="Button" parent="."]
margin_left = 436.0
margin_top = 515.0
margin_right = 563.0
margin_bottom = 563.0
text = "Sell"

[node name="StatusContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="LocationContainer" type="HBoxContainer" parent="StatusContainer"]
margin_right = 244.0
margin_bottom = 30.0

[node name="LocationLabel" type="RichTextLabel" parent="StatusContainer/LocationContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Selected Location:"

[node name="LocationSelected" type="RichTextLabel" parent="StatusContainer/LocationContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )

[node name="WeatherContainer" type="HBoxContainer" parent="StatusContainer"]
margin_top = 34.0
margin_right = 244.0
margin_bottom = 64.0

[node name="WeatherLabel" type="RichTextLabel" parent="StatusContainer/WeatherContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Weather:"

[node name="CurrentWeather" type="RichTextLabel" parent="StatusContainer/WeatherContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )

[node name="EventContainer" type="HBoxContainer" parent="StatusContainer"]
margin_top = 68.0
margin_right = 244.0
margin_bottom = 98.0

[node name="EventLabel" type="RichTextLabel" parent="StatusContainer/EventContainer"]
margin_right = 120.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )
text = "Special Event:"

[node name="CurrentEvent" type="RichTextLabel" parent="StatusContainer/EventContainer"]
margin_left = 124.0
margin_right = 244.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 30 )

[connection signal="pressed" from="Downtown" to="." method="_on_Downtown_pressed"]
[connection signal="pressed" from="Waikiki" to="." method="_on_Waikiki_pressed"]
[connection signal="pressed" from="Stadium" to="." method="_on_Stadium_pressed"]
[connection signal="pressed" from="University" to="." method="_on_University_pressed"]
[connection signal="pressed" from="Sell" to="." method="_on_Sell_pressed"]
